--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
                     <!-- Search Bar -->
                     <form method="GET" action="#" class="flex-grow-1 me-4">
                         <div class="input-group w-100">
-                            <input class="form-control border-1 bg-transparent" type="text" name="q" placeholder="{% trans 'Search' %}" style="border: 1px solid #C80757;">
+                            <input class="form-control border-1 bg-transparent" type="text" name="q" placeholder="{% trans 'Search' %}" style="border: none; box-shadow: 1px 4px 8px rgba(237, 169, 204, 0.5); border-radius: 5%;"                            ">
                             <div class="input-group-append">
                                 <button class="form-control btn border-0" type="submit" aria-label="Search">
                                     <span class="icon"><i class="fas fa-search fa-lg" style="color: #C80757;"></i></span>
