--- a/static/css/home.css
+++ b/static/css/home.css
@@ -89,17 +89,141 @@
     font-family: 'Abril Fatface';
     font-style: normal;
     font-weight: 400;
-    font-size: 40px;
+    font-size: 35px;
     line-height: 54px;
-    
     color: #9C0645;
 }
 
-/* Group 31 */
+.divider-line {
+    display: flex;
+    align-items: center;
+  }
+  
+.line {
+    height: 2px;
+    background-color: #DF0962; /* or any color you'd like */
+    display: inline-block;
+    width: 390px;
+  }
 
-position: absolute;
-width: 590px;
-height: 29px;
-left: 868px;
-top: 664px;
+label {
+font-family: 'Afacad';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 27px;
+color: black;
+}
 
+.map-form {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 5px 4px rgba(237, 169, 204, 0.5);
+    border-radius: 10px;
+    border: transparent;
+    color: #969696;
+    font-family: 'Afacad';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+/* Price selector bar */
+  .custom-range::-webkit-slider-thumb {
+    background: #F35C9B;
+    border: 1px solid #F35C9B;
+  }
+
+  .custom-range::-moz-range-thumb {
+    background: #F35C9B;
+    border: 1px solid #F35C9B;
+  }
+
+  .custom-range::-ms-thumb {
+    background: #F35C9B;
+    border: 1px solid #F35C9B;
+  }
+
+  .custom-range::-webkit-slider-runnable-track {
+    background: #FFD4E6;
+  }
+
+  .custom-range::-moz-range-track {
+    background: #FFD4E6;
+  }
+
+  .custom-range::-ms-track {
+    background: #FFD4E6;
+    border-color: transparent;
+    color: transparent;
+  }
+
+/* Webkit: Chrome, Safari */
+.custom-range::-webkit-slider-thumb:hover,
+.custom-range::-webkit-slider-thumb:focus,
+.custom-range::-webkit-slider-thumb:active {
+  background: #DF0962; /* A darker pink for feedback */
+  border: 1px solid #DF0962;
+}
+
+/* Firefox */
+.custom-range::-moz-range-thumb:hover,
+.custom-range::-moz-range-thumb:focus,
+.custom-range::-moz-range-thumb:active {
+  background: #DF0962;
+  border: 1px solid #DF0962;
+}
+
+/* IE / Edge */
+.custom-range::-ms-thumb:hover,
+.custom-range::-ms-thumb:focus,
+.custom-range::-ms-thumb:active {
+  background: #DF0962;
+  border: 1px solid #DF0962;
+}
+
+/* Map submit button */
+
+.map-btn {
+    width: 204.5px;
+    height: 40px;
+    color: #FFFFFF;
+    background: #C80757;
+    border: 1px solid #C80757;
+    border-radius: 10px;
+    font-family: 'Akatab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    text-align: center;
+}
+
+.map-btn:hover {
+    background: #DF0962;
+    border: 1px solid #DF0962;
+    color: #FFFFFF;
+    text-decoration: none;
+    box-shadow: 0px 1px 1px #9C0645;
+}
+
+/* Map */
+
+.map-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 75%; /* 4:3 ratio */
+    border: none;
+    border-radius: 12px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+  }
+  
+  .map-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+  
