--- a/static/css/home.css
+++ b/static/css/home.css
@@ -69,7 +69,7 @@
     color: #FFFFFF;
   }
   
-  .vector-65 {
+  .vector-left {
     position: absolute;
     z-index: 3;
     left: 1.5%;
@@ -77,7 +77,7 @@
   }
   
   /* Right vertical line */
-  .vector-75 {
+  .vector-right {
     position: absolute;
     z-index: 3;
     right: 1.5%;
@@ -85,12 +85,21 @@
   }
   
 /* Map section */
-.section-title {
+.section-title-h2 {
     font-family: 'Abril Fatface';
     font-style: normal;
     font-weight: 400;
     font-size: 35px;
     line-height: 54px;
+    color: #9C0645;
+}
+
+.section-title {
+    font-family: 'Abril Fatface';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 43px;
     color: #9C0645;
 }
 
@@ -183,7 +192,7 @@ color: black;
 
 /* Map submit button */
 
-.map-btn {
+.project-btn {
     width: 204.5px;
     height: 40px;
     color: #FFFFFF;
@@ -197,7 +206,7 @@ color: black;
     text-align: center;
 }
 
-.map-btn:hover {
+.project-btn:hover {
     background: #DF0962;
     border: 1px solid #DF0962;
     color: #FFFFFF;
@@ -216,6 +225,7 @@ color: black;
     border-radius: 12px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
     overflow: hidden;
+    margin-left: 5%;
   }
   
   .map-container iframe {
@@ -227,3 +237,112 @@ color: black;
     border: 0;
   }
   
+  /* Troop Section */
+.troops-section,
+.join-section {
+  background: rgba(237, 169, 204, 0.5);
+}
+
+.troop-title {
+  font-family: 'Abril Fatface';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  color: #000000;
+}
+
+.troop-text {
+  font-family: 'Afacad';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 27px;
+  color: #000000;
+}
+
+.troop-location {
+  font-family: 'Afacad';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #9C0645;
+}
+
+.troop-date {
+  font-weight: bolder;
+  font-family: 'Afacad';
+  font-size: 16px;
+  line-height: 21px;
+  color: #9C0645;
+}
+
+.diamond {
+  width: 35px;
+  height: 35px;
+  background-color: #FDD3E6;
+  transform: rotate(45deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 5px;
+  font-weight: bold;
+  color: #F35C9B;
+  border: 2px solid #F35C9B;
+}
+
+.diamond.active {
+  background-color: #F35C9B;
+  color: white;
+}
+
+.diamond span {
+  transform: rotate(-45deg);
+}
+
+.chevron {
+  cursor: pointer;
+   position: absolute;
+   z-index: 5;
+   top: 30%;
+}
+
+.chevron-left {
+  margin: 1.5%;
+}
+
+.chevron-right {
+  right: -5.5%;
+}
+
+/* Article Section  */
+
+.article-text {
+  right-left: 5%;
+}
+
+.article-img {
+  margin-left: 5%;
+  /* max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto; */
+}
+
+/* Join Section */
+.join-text {
+font-family: 'Afacad';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+}
+
+.img-coloumn {
+  padding-right: 7%;
+  width: 100%;
+}
+
+.join-div {
+  height: 267px;
+}
