--- a/templates/base.html
+++ b/templates/base.html
@@ -229,36 +229,18 @@
     {% block extra_js %}{% endblock %}
 
 <!-- Footer Section -->
-<footer class="footer-cover text-white py-4">
+<footer class="footer-cover py-4">
     <div class="footer-content container-fluid">
         <div class="row justify-content-between text-center text-md-left"> <!-- Centering text on mobile -->
             <!-- Column 1: Logo -->
-            <div class="col-md-2 mb-3 mb-md-0"> <!-- Added margin for mobile -->
+            <div class="col-md-3 mb-3 mb-md-0"> <!-- Added margin for mobile -->
                 <a href="{% url 'home' %}">
                     <img src="{% static 'images/logo.png' %}" alt="Logo" loading="lazy" class="footer-logo"> 
                 </a>
-            </div>
-
-            <!-- Column 2: Residenza 126 -->
-            <div class="col-md-2 mb-3 mb-md-0">
-                <p class="lilla mb-2"><strong>Residenza 126:</strong></p>
-                <p>
-                    <a href="{% url 'home' %}#building" class="footer-link building-link">{% trans 'Building Info' %}</a><br>
-                    <a href="{% url 'home' %}#location" class="footer-link location-link">{% trans 'View Location' %}</a>
-                </p>
-            </div>
-
-            <!-- Column 3: Apartment Types -->
-            <div class="col-md-2 mb-3 mb-md-0">
-                <p class="lilla mb-2"><strong>{% trans 'Apartment Types:' %}</strong></p>
-                <ul class="list-unstyled">
-                    <li><a href="{% url 'home' %}#bilocali" class="footer-link apartment-link">{% trans 'Two Rooms' %}</a></li>
-                    <li><a href="{% url 'home' %}#trilocali" class="footer-link apartment-link">{% trans 'Three Rooms' %}</a></li>
-                </ul>
-            </div>
-
-            <!-- Column 4: Social Media Links -->
-            <div class="col-md-2 mb-3 mb-md-0">
+                <p class="footer-text mb-0">Une entreprise indépendante qui souhaite aider au mieux tous les 
+                    petits cabarets et spectacles burlesques à gagner en visibilité.</p>
+                <!-- Column 4: Social Media Links -->
+            <div class="col mb-3 mb-md-0">
                 <p class="socials mb-3">
                     <span class="icon-container">
                         <a class="links whatsapp" 
@@ -287,17 +269,33 @@
                     </span>
                 </p>
             </div>
+            </div>
+
+            <!-- Column 2: Site Guests -->
+            <div class="col-md-3 mb-3 mb-md-0">
+                <p>
+                    <a href="{% url 'home' %}#building" class="footer-link building-link">{% trans 'Les Shows' %}</a><br>
+                    <a href="{% url 'home' %}#location" class="footer-link location-link">{% trans 'Les Troupes' %}</a><br>
+                    <a href="{% url 'home' %}#location" class="footer-link location-link">{% trans 'Les Articles' %}</a><br>
+                </p>
+            </div>
+
+            <!-- Column 3: Business -->
+            <div class="col-md-3 mb-3 mb-md-0">
+                <ul class="list-unstyled">
+                    <li><a href="{% url 'home' %}#bilocali" class="footer-link apartment-link">{% trans 'Apparaitre sur le site' %}</a></li>
+                    <li><a href="{% url 'home' %}#trilocali" class="footer-link apartment-link">{% trans 'Tarifs' %}</a></li>
+                    <li><a href="{% url 'home' %}#trilocali" class="footer-link apartment-link">{% trans 'A propos de nous' %}</a></li>
+                </ul>
+            </div>
 
             <!-- Column 5: Contact Information -->
-            <div class="col-md-2 mb-3 mb-md-0">
-                <p class="lilla mb-2"><strong>{% trans 'Contact Information:' %}</strong></p>
+            <div class="col-md-3 mb-3 mb-md-0">
                 <p class="mb-1">
-                    <strong>{% trans 'Phone:' %}</strong><br> <!-- Added <br> for line break -->
-                    <a href="tel:+393333951557" target="_blank" rel="noopener nofollow" class="footer-link email-link">+39 333 395 1557</a>
+                    <a href="tel:+393333951557" target="_blank" rel="noopener nofollow" class="footer-link email-link">Contact Us</a>
                 </p>
                 <p class="mb-1">
-                    <strong>{% trans 'Email:' %}</strong><br> <!-- Added <br> for line break -->
-                    <a href="mailto:info@argicostruzioni.com" target="_blank" rel="noopener nofollow" class="footer-link email-link">info@argicostruzioni.com</a>
+                    <a href="mailto:info@argicostruzioni.com" target="_blank" rel="noopener nofollow" class="footer-link email-link">Cookies</a>
                 </p>
                 <p><a class="privacy" href="https://www.freeprivacypolicy.com/live/ef970174-4dba-4a4c-bb24-6cd4d2fa481c" target="_blank" rel="noopener nofollow">Privacy Policy</a></p>
             </div>
@@ -306,9 +304,9 @@
         <div class="row mt-4">
             <div class="col-12 text-center">
                 <p class="lilla mb-1">
-                    <a href="mailto:lilla-kavecsanszki@outlook.com" target="_blank" rel="noopener nofollow" class="email-link">MADE BY Lilla Kavecsanszki</a>
+                    <a href="mailto:lilla-kavecsanszki@outlook.com" target="_blank" rel="noopener nofollow" class="email-link">MADE BY Larry's Agency</a>
                 </p>
-                <p>&copy; 2024 {% trans 'All rights reserved.' %}</p>
+                <p class="all-rights">&copy; 2025 {% trans 'All rights reserved.' %}</p>
             </div>
         </div>
     </div>
