Added shimmer effect to hero-text

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -229,13 +229,13 @@
 <!-- Want to join? Section -->
 <section class="join-section py-5">
   <div class="container">
-    <div class="row join-div align-items-center">
+    <div class="row align-items-center">
     <!-- Left Image Column -->
       <div class="col-md-7 img-coloumn text-center">
             <img src="{% static 'images/carneval.png' %}" alt="Relevant Article Photo" class="img-fluid article-img">
       </div>
     <!-- Right Text Column -->
-      <div class="col-md-5 text-coloumn">
+      <div class="col-md-5 mt-3 mb-2 text-coloumn">
         <h3 class="section-title mb-4">Envie d’apparaitre sur le site  ?</h3>
         <p class="join-text">
           J’ai une troupe, je gère un cabaret et je veux avoir faire partie du site ? 
