--- a/static/css/home.css
+++ b/static/css/home.css
@@ -56,11 +56,56 @@
     font-weight: 600;
     font-size: 28px;
     line-height: 43px;
-    color: #F35C9B;
+    /* color: #F35C9B; */
+    background: linear-gradient(90deg, #F35C9B 0%, #DF0962 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     left: 117px;
     top: 409px;
+
+     /* Shimmer effect */
+  position: relative;
+  overflow: hidden;
+}
+
+.hero-text {
+  position: absolute;
+  z-index: 3;
+  font-family: 'Afacad', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 43px;
+  left: 117px;
+  top: 409px;
+
+  background: linear-gradient(
+    90deg,
+    #F35C9B 0%,
+    #DF0962 20%,
+    #ffd9a6 40%,  /* warm reflector light (theatre shimmer) */
+    #DF0962 60%,
+    #F35C9B 100%
+  );
+  background-size: 200% auto;
+  background-position: left center;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  -webkit-text-fill-color: transparent;
+
+  animation: shimmerText 4s linear infinite;
+}
+
+@keyframes shimmerText {
+  0% {
+    background-position: 200% center;
   }
-  
+  100% {
+    background-position: -200% center;
+  }
+}
+
   /* Chevrons */
   .fa-angles-left, 
   .fa-angles-right {
@@ -324,10 +369,7 @@ color: black;
 
 .article-img {
   margin-left: 5%;
-  /* max-width: 100%;
-  height: auto;
-  display: block;
-  margin: 0 auto; */
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
 }
 
 /* Join Section */
@@ -341,6 +383,17 @@ font-size: 20px;
 .img-coloumn {
   padding-right: 7%;
   width: 100%;
+  height: 267px;
+}
+
+.img-coloumn img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  border: 1px solid #DF0962;
+  overflow: hidden;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.6);
 }
 
 .join-div {
