--- a/templates/base.html
+++ b/templates/base.html
@@ -229,18 +229,18 @@
     {% block extra_js %}{% endblock %}
 
 <!-- Footer Section -->
-<footer class="footer-cover py-4">
+<footer class="footer-cover mt-4 py-4">
     <div class="footer-content container-fluid">
         <div class="row justify-content-between text-center text-md-left"> <!-- Centering text on mobile -->
             <!-- Column 1: Logo -->
-            <div class="col-md-3 mb-3 mb-md-0"> <!-- Added margin for mobile -->
-                <a href="{% url 'home' %}">
+            <div class="col-md-3 mb-1 mb-md-0"> <!-- Added margin for mobile -->
+                <a class="mb-2" href="{% url 'home' %}">
                     <img src="{% static 'images/logo.png' %}" alt="Logo" loading="lazy" class="footer-logo"> 
                 </a>
                 <p class="footer-text mb-0">Une entreprise indépendante qui souhaite aider au mieux tous les 
                     petits cabarets et spectacles burlesques à gagner en visibilité.</p>
                 <!-- Column 4: Social Media Links -->
-            <div class="col mb-3 mb-md-0">
+            <div class="col mb-0 mt-3 mb-md-0">
                 <p class="socials mb-3">
                     <span class="icon-container">
                         <a class="links whatsapp" 
@@ -301,7 +301,7 @@
             </div>
         </div>
         <!-- "Made By" Section Below the Columns -->
-        <div class="row mt-4">
+        <div class="row mt-3">
             <div class="col-12 text-center">
                 <p class="lilla mb-1">
                     <a href="mailto:lilla-kavecsanszki@outlook.com" target="_blank" rel="noopener nofollow" class="email-link">MADE BY Larry's Agency</a>
